Complete frontend and backend implementation for Civix platform